--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ body {
     background-position: top center;
     background-size: cover;
 
+    height: 100vh;
+
     /*backgorund: color image repeat position/size*/
 }
 
@@ -159,4 +161,16 @@ footer {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 14px;
+}
+
+/*Media queries*/
+
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(assets/bg-desktop.jpg);
+    }
+
+    .light {
+        --bg-url: url(assets/bg-desktop-light.jpg);
+    }
 }
